--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stocktickerapp",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
